--- a/.github/workflows/backend-docker-image.yml
+++ b/.github/workflows/backend-docker-image.yml
@@ -40,6 +40,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
+          file: ./backend/Dockerfile
           tags: backend-${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
       - name: Generate artifact attestation
