--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:slim AS build
 WORKDIR /app
-COPY package*.json ./
+COPY ./frontend/package*.json ./
 RUN npm install
 COPY . .
 RUN npm run build
