--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "dev": "tsc --watch & node dist/core/server.js",
     "build": "tsc",
     "start": "node dist/core/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tsc --noEmit && node --import tsx --test src/**/*.spec.ts",
+    "test:watch": "tsc --noEmit && node --import tsx --test src/**/*.spec.ts --watch"
   },
   "dependencies": {
     "fastify": "^5.3.2",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.14.1",
+    "tsx": "^4.19.3",
     "typescript": "^5.8.3"
   }
 }
