--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
     "dev": "tsc --watch & node dist/core/server.js",
     "build": "tsc",
     "start": "node dist/core/server.js",
-    "test": "tsc --noEmit && node --import tsx --test src/**/*.spec.ts",
+    "test": "tsc --noEmit && node --import tsx --test src/**/**/*.spec.ts",
     "test:watch": "tsc --noEmit && node --import tsx --test src/**/*.spec.ts --watch"
   },
   "dependencies": {
