--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
     "dev": "pnpm clean && tsc-watch --onSuccess 'pnpm start:dev'",
     "start:dev": "pnpm copy-templates && node dist/core/server.js",
     "build": "pnpm clean && tsc && pnpm copy-templates",
-    "copy-templates": "cp -r src/api/templates dist/api/templates",
+    "copy-templates": "cp -r src/api/templates dist/api && cp -r src/api/public dist/api",
     "clean": "rm -rf dist",
     "lint": "eslint --ext .ts src",
     "lint:fix": "eslint --ext .ts src --fix",
@@ -30,6 +30,9 @@
     "test:watch2": "node --watch --import tsx --test $(find src -name '*.spec.ts')"
   },
   "dependencies": {
+    "@fastify/static": "^8.1.1",
+    "@fastify/swagger": "^9.5.0",
+    "@fastify/swagger-ui": "^5.2.2",
     "fastify": "^5.3.2",
     "handlebars": "^4.7.8",
     "zod": "^3.24.3"
