--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,11 @@
-FROM node:slim AS build
+FROM node:lts-alpine AS build
 WORKDIR /app
 COPY ./backend/package*.json ./
-RUN NODE_ENV=development npm install
+RUN npm install
 COPY ./backend .
 RUN npm run build
 
-FROM node:current-alpine
+FROM node:lts-alpine
 COPY --from=build /app/dist ./dist
 EXPOSE 3000
 CMD ["npm", "run", "start;"]
