fix(build CI): install pnpm

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:slim AS build
 WORKDIR /app
 COPY ./backend/package*.json ./
-RUN wget -qO- https://get.pnpm.io/install.sh | ENV="$HOME/.bashrc" SHELL="$(which bash)" bash -
+RUN npm install -g pnpm@latest
 RUN pnpm install
 COPY ./backend .
 RUN pnpm build
