--- a/.github/workflows/backend-docker-image.yml
+++ b/.github/workflows/backend-docker-image.yml
@@ -40,8 +40,8 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          context: ./backend
-          file: Dockerfile
+          context: ../../backend
+          file: ./backend/Dockerfile
           tags: ${{ steps.meta.outputs.tags }}-backend
           labels: ${{ steps.meta.outputs.labels }}
       - name: Generate artifact attestation
